<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_tool_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/ivCoin"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_5sdp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtName"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/symbol"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSymbol"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/symbol"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />
            <TextView
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/block_time"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/name"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />
            <TextView
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/description"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/description"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>